# pre-commit-hooks

./: .pre-commit-hooks.yaml  setup.cfg
pre_commit_hooks/: check_commit_message.py
